# gnc-tools

./: README.md  example.py  pyproject.toml
src/gnc/: __init__.py  gnc.py  linalg.py
